Change of institution

--- a/dodecane.html
+++ b/dodecane.html
@@ -34,7 +34,7 @@ Hi, this is my test page.
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="images/img1.jpg" alt="Chania" width="460" height="345">
+        <img src="img1.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
