--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@ image2.src = "images/img4.jpg"
 
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
-Postdoctoral Associate<br>
-<a href="http://www.mae.cornell.edu/" target="_blank">Sibley school of Mechanical and Aerospace Engineering</a><br>
-<a href="http://www.cornell.edu/" target="_blank">Cornell University</a><br>
-Rhodes Hall, Room 633,<br>
-Ithaca, NY-14853<br>
+Assistant Professor<br>
+<a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a><br>
+<a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a><br>
+Thermodynamics and Combustion Engines Lab,<br>
+IIT Madras, Chennai 600036<br>
+krithika (at) iitm (dot) ac (dot) in<br>
 krithika.n (at) alumni (dot) stanford (dot) edu<br>
 krit87 (at) stanford (dot) edu<br>
-krithu.n (at) gmail (dot) com<br>
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
-<h2>Research</h2>
-I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_blank">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/" target="_blank">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br>
-<br>
+<!-- <h2>Research</h2>
+I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_blank">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/" target="_blank">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br> -->
+<!-- <br> -->
 <a href="./Documents/Research_Experience.pdf" target="_blank">Research Experience</a> <br>
 <a href="./Documents/krithika_publications.pdf" target="_blank">List of publications</a> <br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
