Change of institution

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ Assistant Professor<br>
 Thermodynamics and Combustion Engines Lab,<br>
 IIT Madras, Chennai 600036<br>
 krithika (at) iitm (dot) ac (dot) in<br>
-krithika.n (at) alumni (dot) stanford (dot) edu<br>
-krit87 (at) stanford (dot) edu<br>
+<!-- krithika.n (at) alumni (dot) stanford (dot) edu<br>
+krit87 (at) stanford (dot) edu<br> -->
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
 <!-- <h2>Research</h2>
 I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_blank">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/" target="_blank">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br> -->
-<!-- <br> -->
+<br>
 <a href="./Documents/Research_Experience.pdf" target="_blank">Research Experience</a> <br>
 <a href="./Documents/krithika_publications.pdf" target="_blank">List of publications</a> <br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
