Change of institution

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ krit87 (at) stanford (dot) edu<br> -->
 I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_blank">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/" target="_blank">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br> -->
 <br>
 <a href="./Documents/Research_Experience.pdf" target="_blank">Research Experience</a> <br>
-<a href="./Documents/krithika_publications.pdf" target="_blank">List of publications</a> <br>
+<!-- <a href="./Documents/krithika_publications.pdf" target="_blank">List of publications</a> <br> -->
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
 <a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy" target="_blank">ResearchGate page</a> <br>
 </td>
@@ -177,6 +177,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <a href="http://www.davgirlsgopalapuram.com" target="_blank">DAV Girls, Gopalapuram</a></br>
 <a href="http://www.iitm.ac.in" target="_blank">Indian Institute of Technology Madras</a></br>
 <a href="http://www.stanford.edu" target="_blank">Stanford University</a></br>
+<a href="http://www.cornell.edu" target="_blank">Cornell University</a></br>
 </td>
 </tr>
 
