--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@ Assistant Professor<br>
 <a href="https://mech.iitm.ac.in/meiitm/" target="_blank">Department of Mechanical Engineering</a><br>
 <a href="https://www.iitm.ac.in/" target="_blank">Indian Institute of Technology Madras</a><br>
 Thermodynamics and Combustion Engines Lab,<br>
-IIT Madras, Chennai 600036<br>
-krithika (at) iitm (dot) ac (dot) in<br>
+Indian Institute of Technology Madras, <br>
+Chennai - 600036<br>
+Email: krithika (at) iitm (dot) ac (dot) in<br>
 <!-- krithika.n (at) alumni (dot) stanford (dot) edu<br>
 krit87 (at) stanford (dot) edu<br> -->
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
