--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <h2>Component Library framework</h2>
  <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>
  Validation results: 
+	<ul style="list-style-type:square"> 
  <li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
   target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> 
  <li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
@@ -176,6 +177,7 @@ All mechanism are made available and have been validated as discussed in the jou
   target="_blank">High temperature mechanism for {\it n}-heptane, iso-octane, and toluene</a></br>
  <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
   target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> -->
+ 	</ul>
 </td>
 </tr>
 
