--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ All mechanism are made available and have been validated as discussed in the jou
  <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"
   target="_blank">High temperature mechanism for {\it n}-heptane, iso-octane, and toluene</a></br> </li>
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> -->
+  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
  	</ul>
 </td>
 </tr>
