--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ All mechanism are made available and have been validated as discussed in the jou
  <li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
   target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> 
  <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"
-  target="_blank">High temperature mechanism for {\it n}-heptane, iso-octane, and toluene</a></br> </li>
+  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
   target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
  	</ul>
