--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+<h2>In review</h2>
+<!-- <h4>Click each item for more details</h4> -->
+
+<ul>
+<div id="flip4">
+<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute (submitted).</div>
+<div id="panel1">
+
+<div id="flip5">
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (submitted).</div>
+<div id="panel1">
+	
+</tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
 
