--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <ul>
 <div id="flip4">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute (submitted).</div>
+	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
 <div id="panel1">
 
 <div id="flip5">
