Update arXiv link

--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <ul>
 <div id="flip4">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute (submitted).</div>
-	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
 <div id="panel1">
+	<ul style="list-style-type:square">
+	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
+	</ul>
+</div>
+<br>
 
 <div id="flip5">
 <li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (submitted).</div>
