--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="panel1">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
-	<h3>Component Library framework</h3>
+	<li>Component Library framework</li>
 	 	<a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>
  <br>
  	Validation results: 
-	<ul style="list-style-type:square"> 
+	<ul style="list-style-type:circle"> 
 	 	<li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
   		target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> 
  		<li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
@@ -136,24 +136,24 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	</ul>
 </div>
 <br>
-<tr>
-<td>
-<h2>Component Library framework</h2>
- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>
- <br>
- Validation results: 
-	<ul style="list-style-type:square"> 
- <li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-  target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> 
- <li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
-  target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> 
- <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"
-  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>
+<!--<tr>-->
+<!--<td>-->
+<!--<h2>Component Library framework</h2>-->
+<!-- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>-->
+<!-- <br>-->
+<!-- Validation results: -->
+<!--	<ul style="list-style-type:square"> -->
+<!-- <li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"-->
+<!--  target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> -->
+<!-- <li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"-->
+<!--  target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> -->
+<!-- <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"-->
+<!--  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>-->
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
- 	</ul>
-</td>
-</tr>
+<!--  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> -->
+<!-- 	</ul>-->
+<!--</td>-->
+<!--</tr>-->
 
 	
 </tr>
