--- a/index.html
+++ b/index.html
@@ -104,38 +104,15 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
-<div id="flip4">
+<div id="flip5">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute (submitted).</div>
-<div id="panel1">
+<div id="panel5">
 	<ul style="list-style-type:square">
 	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
 	</ul>
 </div>
 <br>
 
-<div id="flip5">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted).</div>
-<div id="panel1">
-	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
-	<li>Component Library framework</li>
-	 	<a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>
- <br>
- 	Validation results: 
-	<ul style="list-style-type:circle"> 
-	 	<li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-  		target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> 
- 		<li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
-  		target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> 
- 		<li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"
-  		target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>
- <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
- 	</ul>
- 	
-	</ul>
-</div>
-<br>
 <!--<tr>-->
 <!--<td>-->
 <!--<h2>Component Library framework</h2>-->
@@ -150,7 +127,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"-->
 <!--  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>-->
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-<!--  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> -->
+<!--  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> -->
 <!-- 	</ul>-->
 <!--</td>-->
 <!--</tr>-->
@@ -165,8 +142,30 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <ul>
 <div id="flip1">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", Combustion and Flame, 162 (4), 2015.</div>
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted).</div>
 <div id="panel1">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li>Component Library framework: <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></li></br>
+ 	Validation results: 
+	<ul style="list-style-type:circle"> 
+	 	<li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
+  		target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> 
+ 		<li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"
+  		target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> 
+ 		<li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"
+  		target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>
+ <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
+  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
+ 	</ul>
+ 	
+	</ul>
+</div>
+<br>	
+	
+<div id="flip2">
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", Combustion and Flame, 162 (4), 2015.</div>
+<div id="panel2">
 	<ul style="list-style-type:square">
 		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
 		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218014003344" target="_blank">Journal version</a></li>
@@ -179,9 +178,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </div>
 <br>
 
-<div id="flip2">
+<div id="flip3">
 	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 161 (4), 2014. </div>
-<div id="panel2"> 
+<div id="panel3"> 
 	<ul style="list-style-type:square"> 
 		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
 		<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866" target="_blank">Journal version</a></li>
@@ -195,9 +194,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </div>
 <br>
 
-<div id="flip3">
+<div id="flip4">
 <li> K. Narayanaswamy, G. Blanquart, H. Pitsch, "A consistent chemical mechanism for oxidation of substituted aromatic species", Combustion and Flame, 2010</li>
-<div id="panel3"> 
+<div id="panel4"> 
 	<ul style="list-style-type:square"> 
 		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
 		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218010001975" target="_blank">Journal version</a></li>
