--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@ $(document).ready(function(){
 });
 </script>
 
+<script>
+$(document).ready(function(){
+  $("#flip4").click(function(){
+    $("#panel4").slideToggle("slow");
+  });
+});
+</script>
+
+<script>
+$(document).ready(function(){
+  $("#flip5").click(function(){
+    $("#panel5").slideToggle("slow");
+  });
+});
+</script>
+
 <style> 
 #panel,#flip
 {
