--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="panel2">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
-	<li>Component Library framework: <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></li></br>
+	<li>Component Library framework: <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></li>
  	Validation results: 
 	<ul style="list-style-type:circle"> 
 	 	<li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
