Added DOI for CNF paper

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 
 <ul>
 <div id="flip2">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted).</div>
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted) doi: 10.1016/j.combustflame.2015.12.013.
+</div>
 <div id="panel2">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
