--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
   target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> --> 
  	</ul>
- 	
+	<li><a href="https://www.dropbox.com/s/zzec5teio3ng70d/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
+	<li>Chemkin format: <a href="https://www.dropbox.com/s/kacarzf3ep2p0o1/jetSurrogateChemkin.txt?dl=0" target="_blank">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cileaefdy4wh1h8/jetSurrogateChemkin_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+	<li>FlameMaster format: <a href="https://www.dropbox.com/s/ca4uubefhsauayb/jetSurrogateFlameMaster.txt?dl=0" target="_blank">Complete mechanism </a>/<a href="https://www.dropbox.com/s/x456yhwt3y3rm4k/jetSurrogateFlameMaster_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
 	</ul>
 </div>
 <br>	
