Adding thermo and trans to CLA article

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	<li><a href="https://www.dropbox.com/s/zzec5teio3ng70d/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
 	<li>Chemkin format: <a href="https://www.dropbox.com/s/kacarzf3ep2p0o1/jetSurrogateChemkin.txt?dl=0" target="_blank">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cileaefdy4wh1h8/jetSurrogateChemkin_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
 	<li>FlameMaster format: <a href="https://www.dropbox.com/s/ca4uubefhsauayb/jetSurrogateFlameMaster.txt?dl=0" target="_blank">Complete mechanism </a>/<a href="https://www.dropbox.com/s/x456yhwt3y3rm4k/jetSurrogateFlameMaster_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+	<li><a href="https://www.dropbox.com/s/f6idoo2hoo0cl32/thermo_FULL.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+	<li><a href="https://www.dropbox.com/s/f3vdhjhitsagoou/trans_FULL.txt?dl=0" target="_blank">Transport data</a></li>
 	</ul>
 </div>
 <br>	
@@ -193,6 +195,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 		<li>FlameMaster format: <a href="https://www.dropbox.com/s/y8a8o1j763bcrqf/reNumber.txt?dl=0" target="_blank">Complete mechanism </a>/<a href="https://www.dropbox.com/s/rgc0lhsejbfxzf4/reNumber_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
 		<li><a href="https://www.dropbox.com/s/uaj2d4zioi1tmr2/thermo_FULL.txt?dl=0" target="_blank">Thermodynamic data</a></li>
 		<li><a href="https://www.dropbox.com/s/mp9a2lebrj1bcsb/trans_FULL.txt?dl=0" target="_blank">Transport data</a></li>
+		<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0" target="_blank">Transport data</a></li>
 	</ul>
 </div>
 <br>
