--- a/index.html
+++ b/index.html
@@ -116,18 +116,12 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-<h2>In review</h2>
+<!--<h2>In review</h2>-->
 <!-- <h4>Click each item for more details</h4> -->
 
-<ul>
-<div id="flip1">
-<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute (submitted).</div>
-<div id="panel1">
-	<ul style="list-style-type:square">
-	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
-	</ul>
-</div>
-<br>
+<!--<ul>-->
+
+<!--<br>-->
 
 <!--<tr>-->
 <!--<td>-->
@@ -157,6 +151,13 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
+<div id="flip2">
+<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.</div>
+<div id="panel1">
+	<ul style="list-style-type:square">
+	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
+	</ul>
+</div>
 <div id="flip2">
 <li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted) doi: 10.1016/j.combustflame.2015.12.013.
 </div>
