--- a/index.html
+++ b/index.html
@@ -151,13 +151,16 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
-<div id="flip2">
-<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.</div>
+<div id="flip1">
+<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.
+</div>
 <div id="panel1">
 	<ul style="list-style-type:square">
 	<li><a href="http://arxiv.org/abs/1512.01338" target="_blank">Preprint*</a></li>
 	</ul>
 </div>
+<br>
+
 <div id="flip2">
 <li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame (accepted) doi: 10.1016/j.combustflame.2015.12.013.
 </div>
