--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="flip1">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.
 </div>
+<div id="panel2">
+	<ul style="list-style-type:square">
+	<li><a href="http://arxiv.org/pdf/1512.01338" target="_blank">Preprint*</a></li>
+ 	</ul>
+</div>
 <br>
 
 <div id="flip2">
