--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <br>
 
 <div id="flip2">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame 165 (2016) 288–309 doi: 10.1016/j.combustflame.2015.12.013.
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame 165 (3), 288–309, 2016.
 </div>
 <div id="panel2">
 	<ul style="list-style-type:square">
