--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="panel1">
 	<ul style="list-style-type:square">
 	<li><a href="http://arxiv.org/pdf/1512.01338" target="_blank">Preprint*</a></li>
- 	</ul>
-</div>
+	<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal*</a></li>
+	</ul>
+</div>	
 <br>
 
 <div id="flip2">
