--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div id="panel1">
 	<ul style="list-style-type:square">
 	<li><a href="http://arxiv.org/pdf/1512.01338" target="_blank">Preprint*</a></li>
-	<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal*</a></li>
+	<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>
 	</ul>
 </div>	
 <br>
@@ -236,6 +236,27 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	</ul>
 </div>
 <br>
+</ul>
+
+</td>
+</tr>
+
+</tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h2>Conference proceedings</h2>
+<!-- <h4>Click each item for more details</h4> -->
+<div id="flip1">
+<li> A. D. Lele, K. Anand, K. Narayanaswamy "Development of a chemical kinetic mechanism for biodiesel surrogate", 10th U.S. National Combustion Meeting, 2017.
+</div>
+<div id="panel1">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/sh/jbfkxybp5ds33gk/AAAfZpipVB710nsEqOx1stHaa?dl=0" target="_blank">Supplementary materials*</a></li>
+	</ul>
+</div>	
+<br>
+<ul>
 </ul>
 
 </td>
