M. Tech projects of Sanjay and Vaisakh
Added links to github hosted projects

--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@ All mechanism are made available and have been validated as discussed in the jou
 </td>
 </tr> -->
 
+	<tr>
+<td>
+<h2> M. Tech projects</h2>
+	T. V. Vaisakh <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
+	M. C. Sanjay <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
+Property Estimation Using THERM</a></br>	
+</td>
+</tr>
+	
 <tr>
 <td>
 <h2> Alma mater</h2>
