--- a/index.html
+++ b/index.html
@@ -275,12 +275,16 @@ All mechanism are made available and have been validated as discussed in the jou
 	<tr>
 <td>
 <h2> M. Tech projects</h2>
-	T. V. Vaisakh <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
-	M. C. Sanjay <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
+<ul>
+<li>	T. V. Vaisakh <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
+<li>	M. C. Sanjay <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
 Property Estimation Using THERM</a></br>	
+		
 </td>
 </tr>
-	
+<br>
+</ul>
+
 <tr>
 <td>
 <h2> Alma mater</h2>
