--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@ All mechanism are made available and have been validated as discussed in the jou
 
 	<tr>
 <td>
-<h2> M. Tech projects</h2>
+<h2> Open source codes</h2>
 <ul>
-<li>	T. V. Vaisakh <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
-<li>	M. C. Sanjay <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
+<li>	T. V. Vaisakh (M. Tech) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
+<li>	M. C. Sanjay (M. Tech) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
 Property Estimation Using THERM</a></br>	
 		
 </td>
