--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <a href="https://mech.iitm.ac.in/meiitm/personnal/dr-krithika-narayanaswamy/" target="_blank">Faculty page</a><br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
 <a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy" target="_blank">ResearchGate page</a> <br>
-<a href="https://owncloud.iitm.ac.in/index.php/s/QZfWJrYujbmlLw4" target="_blank">Group picture (May 2017)</a> <br>
+<!--<a href="https://owncloud.iitm.ac.in/index.php/s/QZfWJrYujbmlLw4" target="_blank">Group picture (May 2017)pw: 1</a> <br>
 </td>
 
 <td width="50%">
