--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
+	
+	
+<div id="flip1">
+<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
+</div>
+<div id="panel1">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/6rqnp4dlg5w1zl1/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
+	</ul>
+</div>	
+<br>
+	
 
 <div id="flip1">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.
