--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <ul>
 	
 	
-<div id="flip1">
+<div id="flip0">
 <li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
 </div>
 <div id="panel1">
@@ -167,7 +167,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 	
 
 <div id="flip1">
-<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute.
+<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute, 36 (1), 507–515, 2017.
 </div>
 <div id="panel1">
 	<ul style="list-style-type:square">
