--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
+</tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h2>Research Team</h2>
+<!-- <h4>Click each item for more details</h4> -->
+<ul>
+
+<li> Aditya Dilip Lele (Jan 2016 --)
+<li> Rohit Khare (Jan 2016 --)
+<li> Shanmugasundaram (Jan 2017 --)
+
 	
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
