--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+
 <!--<h2>In review</h2>-->
 <!-- <h4>Click each item for more details</h4> -->
 
@@ -151,9 +152,6 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
-</tr>
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
-<tr>
 <td>
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
@@ -163,7 +161,10 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <li> Rohit Khare (Jan 2016 --)
 <li> Shanmugasundaram (Jan 2017 --)
 
-	
+<!--><h3>Alumni</h3>
+<li> M. C. Sanjay (M. Tech)
+<li> T. V. Vaisakh (M. Tech) -->
+
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
