--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <li> Rohit Khare (Jan 2016 --)
 <li> Shanmugasundaram (Jan 2017 --)
 
-<!--><h3>Alumni</h3>
-<li> M. C. Sanjay (M. Tech)
-<li> T. V. Vaisakh (M. Tech) -->
+<!--<h3>Alumni</h3>-->
+<!--<li> M. C. Sanjay (M. Tech)-->
+<!--<li> T. V. Vaisakh (M. Tech) -->
 
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
