--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </td>
 </tr>
 
-</tr>
+<!--</tr> -->
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
@@ -306,7 +306,8 @@ All mechanism are made available and have been validated as discussed in the jou
 </td>
 </tr> -->
 
-	<tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
 <td>
 <h2> Open source codes</h2>
 <ul>
