--- a/index.html
+++ b/index.html
@@ -317,6 +317,19 @@ Property Estimation Using THERM</a></br>
 		
 </td>
 </tr>
+
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h2> Teaching</h2>
+<ul>
+<li>	Numerical methods in thermal engineering (Jan--May 2016)
+<li>	Undergraduate thermodynamics (Jul--Nov 2016)	
+<li>	Numerical methods in thermal engineering (Jan--May 2017)
+		
+</td>
+</tr>
+
 <br>
 </ul>
 
