--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@ Property Estimation Using THERM</a></br>
 <td>
 <h2> Teaching</h2>
 <ul>
-<li>	Numerical methods in thermal engineering (Jan--May 2016)
-<li>	Undergraduate thermodynamics (Jul--Nov 2016)	
-<li>	Numerical methods in thermal engineering (Jan--May 2017)
-		
+<li>	ME6150: Numerical methods in thermal engineering (Jan--May 2016)
+<li>	ME1100: Undergraduate thermodynamics (Jul--Nov 2016)	
+<li>	ME6150: Numerical methods in thermal engineering (Jan--May 2017)
+<li>	ME6060: Combustion Fundamentals (Jul--Nov 2017)
 </td>
 </tr>
 
