--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 <ul>
+<td width="50%">
+<img src="./images/krithika.jpg" width="300">	
+</td>
+
+</tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+
+My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
 
 <li> Aditya Dilip Lele (Jan 2016 --)
 <li> Rohit Khare (Jan 2016 --)
