--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
+h2   {color: lightblue;}
+h3   {color: pink;}
+h4   {color: yellow;}
 }
 </style>
 	
@@ -147,7 +150,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!-- <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"-->
 <!--  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>-->
  <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-<!--  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> -->
+<!  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> -->
 <!-- 	</ul>-->
 <!--</td>-->
 <!--</tr>-->
@@ -155,30 +158,86 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-<td width="15%">
-<img src="./images/krithika.png" width="170">	
+<td width="25%">
+</br>
+<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
 </td>
+
 </tr>
-<table border="1" cellspacing="1" cellpadding="5" width="150%">
 <tr>
 <td>
 
+<ul>
+<li> <h3>Kinetics of biodiesel surrogate components:</h3> 
+	One of our recent work concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methyl butanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description. Thereafter, a constrained optimization approach is used to propose a surrogate to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to study the use of biodiesels and its blends with diesel in CI engines. </br>
+</br>  <center><img src="./images/JSR_rme_sur1.jpg" width="300">	</br>
+Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>
+	(presented at the 10th U.S. National Combustion Meeting, 2017) 
+</center> 
+</br>	
+	Most of the available studies are on high temperature kinetics of methyl butanoate oxidation, while some differences are noted between existing studies at lower temperatures. We are collaborating with PTB, Germany to investigate this aspect using Rapid Compression Machines, through which ignition delays of methyl butanoate at the low and intermediate temperatures (T<1000 K), have been measured. Our present work focuses on with developing a kinetic model for methylbutanoate to explain these experimental observations in addition to the ones already in literature. 
+<td width="15%">
+<center><img src="./images/Aditya_Lele.JPG" width="170">	
+</br>
+<h4>Aditya Dilip Lele</h4>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+Pursuing Masters </br>
+Co-advised by Dr. K. Anand</br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+	</center>
+</td>
+</tr>
+<tr>
+<td>
+</ul>
+
+<ul>	
+<li> <h3>Extinction studies of oxygenated fuels:</h3>
+	Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. We are in process of confirming our observations with an experimental study in a  counterflow configuration  </br>
+<center><img src="./images/a2EvsYF1.jpg" width="300">	</br>
+	Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E </br>
+	(presented at the 10th U.S. National Combustion Meeting, 2017) 
+</center> 
+</br>	
+<td width="15%">
+<center><img src="./images/Rohit_Khare.JPG" width="170">	
+</br>
+<h4>Rohit Sanjay Khare</h4>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+Pursuing Masters </br>
+Co-advised by Dr. V. Raghavan</br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</center>
+</td>
+</tr>
+<tr>
+<td>
+</ul>
 
 <ul>
+<li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
+		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
+	<td width="15%">
+	<center><img src="./images/Shanmugasundaram.JPG" width="150">	
+	</br>
+	<h4>Shanmugasundaram D</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+	Pursuing PhD </br>
+	Co-advised by Dr. V. Raghavan</br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</center>
+</ul>
 
-
-<li> Aditya Dilip Lele (Jan 2016 --)
-<li> Rohit Khare (Jan 2016 --)
-<li> Shanmugasundaram (Jan 2017 --)
-
+	
 <!--<h3>Alumni</h3>-->
 <!--<li> M. C. Sanjay (M. Tech)-->
 <!--<li> T. V. Vaisakh (M. Tech) -->
-
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+	
+	
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
 
