--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Co-advised by Dr. K. Anand</br>
 </center> 
 </br>	
 <td width="15%">
-<center><img src="./images/Rohit_Khare.JPG" width="170">	
+<center><img src="./images/Rohit_Khare.jpg" width="170">	
 </br>
 <h4>Rohit Sanjay Khare</h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
@@ -218,7 +218,7 @@ Co-advised by Dr. V. Raghavan</br>
 <li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
 		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
 	<td width="15%">
-	<center><img src="./images/Shanmugasundaram.JPG" width="150">	
+	<center><img src="./images/Shanmugasundaram.jpg" width="150">	
 	</br>
 	<h4>Shanmugasundaram D</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
